feat(auth): change user pin
